[project]
name = "canary-deployer"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "trio==0.31.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["deployer.py"]
